[package]
name = "fastcdc-wasm"
version = "0.1.0"
authors = ["Smoozilla"]
edition = "2018"
decription = "FastCDC using fastcdc-rs (rust) compiled to wasm via webpack."
repository = "TODO"
license = "MIT" 

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
fastcdc = { path = "fastcdc-rs", version = "1.0.3" }
sha2 = "0.8.1"
hex = "0.4.2"
js-sys = "0.3.35"